Revise resume project and skills sections
Updated project descriptions for clarity and technical accuracy, including expanded details on tech stacks and outcomes. Refined technical skills section to better categorize backend, frontend, cloud, and DevOps experience. Improved soft skills section for specificity.

--- a/Updated_Resume/Appwrite_Yash_Agarwal_Resume.tex
+++ b/Updated_Resume/Appwrite_Yash_Agarwal_Resume.tex
@@ -94,10 +94,10 @@
       {Web Developer Intern}{May 2025 -- July 2025}
       {Arterns Technologies Private Limited}{Dehradun, Uttarakhand}
       \resumeItemListStart
-        \resumeItem{Engineered and maintained backend services for a full-stack Applicant Tracking System (ATS), designing RESTful APIs for student assessment modules.}
-        \resumeItem{Optimized backend performance by integrating a real-time chat API, improving data flow and enhancing user experience on \href{https://menticate.com}{\textbf{menticate.com}}.}
-        \resumeItem{Collaborated with the engineering team in an Agile environment, participating in code reviews to ensure code quality and adherence to best practices.}
-        \resumeItem{Reduced project timeline overruns by 20\% by proactively identifying infrastructure risks and implementing mitigation strategies.}
+        \resumeItem{Engineered a full-stack Applicant Tracking System (ATS), designing and implementing the backend logic, database schemas, and RESTful APIs for the student assessment module.}
+        \resumeItem{Enhanced platform functionality by integrating a real-time chat API and launching full Spanish language support using i18next in the Next.js frontend.}
+        \resumeItem{Assisted in troubleshooting technical issues and participated in code reviews, contributing to improved code maintainability and adherence to best practices.}
+        \resumeItem{Reduced project timeline overruns by 20\% by proactively identifying risks and implementing mitigation strategies in an Agile collaboration environment.}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -107,28 +107,27 @@
     \resumeProjectHeading
       {\textbf{\href{https://github.com/190-785/First_Link_Backend}{Wikipedia Path Finder}}}{Oct 2024 -- Dec 2024}
       \resumeItemListStart
-        \resumeItem{\textbf{Tech Stack:} Python, Flask, Redis, MongoDB, Docker, RESTful APIs}
-        \resumeItem{Developed a scalable backend service to trace the traversal path from any Wikipedia page to the 'Philosophy' page by recursively parsing links.}
-        \resumeItem{Implemented Redis caching to store frequent paths and containerized the application with Docker, ensuring high availability and faster response times.}
-        \resumeItem{\textbf{Outcome:} Optimized pathfinding and parsing runtime by approximately 80\%, demonstrating strong problem-solving and system optimization skills.}
-      \resumeItemListEnd
-      
-    \resumeProjectHeading
-      {\textbf{\href{https://github.com/190-785/Interactive-Resume-Maker}{Interactive 3D Resume Builder}}}{Feb 2025 -- May 2025}
-      \resumeItemListStart
-        \resumeItem{\textbf{Tech Stack:} Spring Boot, MongoDB, WebSockets, JWT, React}
-        \resumeItem{Architected a microservices-based backend using Spring Boot for a 3D resume visualizer, handling data persistence with MongoDB.}
-        \resumeItem{Implemented secure, token-based user authentication with JWT and enabled real-time collaboration features using WebSockets for seamless multi-user editing.}
-        \resumeItem{\textbf{Outcome:} Delivered a highly interactive and personalized resume experience with a robust, scalable backend architecture.}
+        \resumeItem{\textbf{Tech Stack:} Python, Flask, Redis, MongoDB, Docker}
+        \resumeItem{Developed a scalable backend service to trace traversal paths on Wikipedia, architected to handle loop and dead-end detection efficiently.}
+        \resumeItem{Containerized the application using Docker for consistent deployment and integrated Redis for caching, significantly boosting scalability and response times under load.}
+        \resumeItem{\textbf{Outcome:} Optimized pathfinding and parsing runtime by approximately 80\%, demonstrating strong skills in backend optimization and infrastructure management.}
       \resumeItemListEnd
 
     \resumeProjectHeading
+      {\textbf{\href{https://github.com/190-785/Interactive-Resume-Maker}{Interactive 3D Resume Builder}}}{Feb 2025 -- May 2025}
+      \resumeItemListStart
+        \resumeItem{\textbf{Tech Stack:} Spring Boot, MongoDB, WebSockets, React, Three.js}
+        \resumeItem{Architected a full-stack application with a Java Spring Boot backend to visualize resume data in an immersive 3D environment.}
+        \resumeItem{Implemented secure JWT authentication and real-time collaboration features using WebSockets, showcasing an understanding of robust API and backend service development.}
+        \resumeItem{\textbf{Outcome:} Delivered a highly interactive and personalized resume experience, proving capabilities in building complex, feature-rich backend systems.}
+      \resumeItemListEnd
+      
+    \resumeProjectHeading
       {\textbf{\href{https://github.com/190-785/Plant_Watering_System}{IoT Automatic Plant Watering System}}}{Jun 2025 -- Jul 2025}
       \resumeItemListStart
-        \resumeItem{\textbf{Tech Stack:} C++, ESP8266, Firebase (GCP), REST APIs}
-        \resumeItem{Designed an autonomous system integrated with a Google Cloud (Firebase) backend for remote monitoring and management of soil moisture data.}
-        \resumeItem{Developed a secure web portal for Wi-Fi configuration and logged real-time telemetry data to Firebase using token-based authentication via REST APIs.}
-        \resumeItem{\textbf{Outcome:} Improved water conservation and achieved a 20\% increase in watering efficiency with a scalable, cloud-connected design.}
+        \resumeItem{\textbf{Tech Stack:} ESP8266, Firebase (GCP), C++}
+        \resumeItem{Designed and built an autonomous system with a cloud backend on Firebase (GCP) for remote monitoring and management of soil moisture telemetry data.}
+        \resumeItem{Developed a secure web portal for Wi-Fi configuration and used token-based authentication to log real-time data, ensuring system integrity and reliability.}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -136,18 +135,19 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Backend Languages}{: Python, Java, Node.js (JavaScript/TypeScript), C++} \\
-     \textbf{Frameworks \& APIs}{: Spring Boot, Flask, Node.js, React, Next.js, RESTful APIs} \\
-     \textbf{Databases \& Caching}{: MongoDB, Firebase, Redis} \\
-     \textbf{DevOps \& Cloud}{: Docker, Git, Postman, CI/CD, Google Cloud Platform (GCP)} \\
-     \textbf{Machine Learning}{: TensorFlow, Keras, scikit-learn, Matplotlib}
+     \textbf{Backend Languages}{: Python, Node.js, Java, C++} \\
+     \textbf{Backend Frameworks}{: Flask, Spring Boot, Node.js} \\
+     \textbf{Databases \& Caching}{: MongoDB, Redis, Firebase} \\
+     \textbf{Infrastructure \& DevOps}{: Docker, Git, Postman, CI/CD (Familiarity)} \\
+     \textbf{Cloud Platforms}{: GCP (via Firebase), Familiarity with AWS \& DigitalOcean} \\
+     \textbf{Frontend}{: JavaScript, TypeScript, React, Next.js}
     }}
  \end{itemize}
 
 %---------- SOFT SKILLS ----------
 \section{Soft Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{Agile Collaboration, Problem-solving, Communication, Teamwork}}
+    \small{\item{Agile Collaboration, Problem-solving, Technical Communication, Teamwork}}
  \end{itemize}
 
 \end{document}
