--- a/Updated_Resume/Updated_Common_Resume.tex
+++ b/Updated_Resume/Updated_Common_Resume.tex
@@ -74,7 +74,7 @@
 %---------- HEADING ----------
 \begin{center}
     \textbf{\Huge \scshape Yash Agarwal} \\ \vspace{1pt}
-    \small +91-90276-01476 $|$ \href{mailto:190e785@gmail.com}{190e785@gmail.com} $|$
+    \small +91 9027601476 $|$ \href{mailto:190e785@gmail.com}{190e785@gmail.com} $|$
     \href{https://in.linkedin.com/in/yash-agarwal-190e785}{\underline{linkedin.com/in/yash-agarwal-190e785}} $|$
     \href{https://github.com/190-785}{\underline{github.com/190-785}}
 \end{center}
@@ -84,20 +84,20 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Graphic Era Hill University}{Uttarakhand, India}
-      {B.Tech. in Computer Science \& Engineering; Honors in ML \& AI}{\textit{\small Aug 2023 -- Present}}
+      {B.Tech. in Computer Science \& Engineering; Honors in ML \& AI}{\textit{\small Aug 2023 -- July 2027}}
   \resumeSubHeadingListEnd
 
 %---------- EXPERIENCE ----------
 \section{Experience}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Web Developer Intern}{May 2025 -- July 2025}
+      {Full-Stack Web Developer Intern}{May 2025 -- July 2025}
       {\href{https://drive.google.com/file/d/1yUwuZXi9aFgvmFDl0UV3BKAaYXMIYn_a/view?usp=sharing}{Arterns Technologies Private Limited}}{Dehradun, Uttarakhand}
       \resumeItemListStart
-        \resumeItem{Developed a full-stack Applicant Tracking System (ATS) with automated resume parsing and student assessment module for \href{https://menticate.com}{\textbf{menticate.com}}, building Node.js backend APIs with Firebase authentication and database integration.}
-        \resumeItem{Integrated Socket.io and Firebase for real-time chat functionality, and architected a reusable theme system enabling seamless site-wide dark mode across multiple pages and components.}
-        \resumeItem{Led the development of \href{https://we-are-on-leaf.vercel.app}{\textbf{we-are-on-leaf.vercel.app}} and implemented i18next internationalization across 8+ pages in \href{https://vedichealings.com}{\textbf{vedichealings.com}} Next.js codebase, delivering complete Spanish language support.}
-        \resumeItem{Reduced project timeline overruns by 20\% by identifying and resolving critical API authentication issues and implementing proactive risk mitigation strategies in an Agile environment.}
+        \resumeItem{Developed full-stack Applicant Tracking System (ATS) with automated resume parsing and student assessment module for \href{https://menticate.com}{\textbf{menticate.com}}. Built Node.js backend APIs with Firebase authentication and database integration.}
+        \resumeItem{Engineered real-time chat functionality using Socket.io integrated with Firebase, and architected reusable theme system enabling seamless site-wide dark mode across multiple pages and components.}
+        \resumeItem{Led development of \href{https://we-are-on-leaf.vercel.app}{\textbf{we-are-on-leaf.vercel.app}} and implemented i18next internationalization across 8+ pages in \href{https://vedichealings.com}{\textbf{vedichealings.com}} Next.js codebase, delivering complete Spanish language support.}
+        \resumeItem{Reduced project timeline overruns by 20\% by identifying and resolving critical API authentication issues, implementing proactive risk mitigation strategies in an Agile environment.}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -112,9 +112,9 @@
       {\textbf{\href{https://final-year-portal.vercel.app}{Final Year Project Management Portal}}}{Aug 2025 -- Present}
       \resumeItemListStart
         \resumeItem{\textbf{Tech Stack:} Next.js, Firebase, Tailwind CSS, Node.js}
-        \resumeItem{Architected and developed the backend infrastructure for a comprehensive project management system serving 1,500+ students, scaling to 3,000+ users across multiple campuses by 2026, managing 400+ project teams across multiple evaluation phases.}
-        \resumeItem{Designed a multi-role access control system with distinct dashboards for students, administrators, faculty, panelists, and external reviewers, implementing secure Firebase authentication and real-time email notification workflows.}
-        \resumeItem{\textbf{Outcome:} Deployed production-ready platform scheduled for official university-wide adoption, streamlining project evaluation workflows and enabling faculty to schedule meetings with automated team notifications.}
+        \resumeItem{Architected scalable backend infrastructure supporting 1,500+ concurrent users for university-wide final year project management system. Implemented complex data modeling for 400+ project teams with multi-phase workflow tracking and evaluation.}
+        \resumeItem{Engineered multi-role access control system with distinct dashboards for students, administrators, faculty, panelists, and external reviewers. Integrated Firebase authentication with real-time email notification workflows.}
+        \resumeItem{\textbf{Outcome:} Deployed production-ready platform scheduled for official university-wide adoption, streamlining project evaluation workflows and enabling automated meeting scheduling with team notifications. Platform scaling to 3,000+ users across multiple campuses starting 2026.}
       \resumeItemListEnd
       
     % PROJECT 2: 3D Resume Builder - Best for: Creative roles, frontend-heavy, real-time features
@@ -122,9 +122,9 @@
       {\textbf{\href{https://github.com/190-785/Interactive-Resume-Maker}{Interactive 3D Resume Builder}}}{Feb 2025 -- May 2025}
       \resumeItemListStart
         \resumeItem{\textbf{Tech Stack:} React, Three.js, MongoDB, Spring Boot, WebSockets}
-        \resumeItem{Architected a full-stack application to visualize resume data in an immersive 3D forest environment, offering a unique and engaging user interface.}
-        \resumeItem{Implemented secure JWT authentication, auto-save versioning, and real-time collaboration features using WebSockets to allow for seamless multi-user editing.}
-        \resumeItem{\textbf{Outcome:} Delivered a highly interactive and personalized resume experience, increasing user engagement and providing a novel alternative to traditional formats.}
+        \resumeItem{Developed full-stack application visualizing resume data in an immersive 3D forest environment, offering unique and engaging user interface experience.}
+        \resumeItem{Implemented secure JWT authentication, auto-save versioning, and real-time collaboration features using WebSockets, enabling seamless multi-user editing with conflict resolution.}
+        \resumeItem{\textbf{Outcome:} Delivered highly interactive and personalized resume experience, increasing user engagement and providing novel alternative to traditional formats.}
       \resumeItemListEnd
       
     % PROJECT 3: Wikipedia Path Finder - Best for: Algorithms, optimization, backend systems
@@ -132,9 +132,9 @@
       {\textbf{\href{https://github.com/190-785/First_Link_Backend}{Wikipedia Path Finder}}}{Oct 2024 -- Dec 2024}
       \resumeItemListStart
         \resumeItem{\textbf{Tech Stack:} Python, Flask, BeautifulSoup, Redis, MongoDB, Docker}
-        \resumeItem{Developed a backend service to trace the traversal path from a given Wikipedia page to the 'Philosophy' page by recursively clicking the first link, detecting loops and dead-ends.}
-        \resumeItem{Integrated Redis caching to store frequent paths and Docker for containerization, ensuring scalability and faster response times under load.}
-        \resumeItem{\textbf{Outcome:} Optimized pathfinding and parsing runtime by approximately 80\%, significantly lowering infrastructure costs and improving user experience.}
+        \resumeItem{Developed distributed backend service tracing traversal path from given Wikipedia page to 'Philosophy' page by recursively clicking first link, implementing intelligent loop detection and dead-end handling.}
+        \resumeItem{Implemented two-tier caching strategy utilizing Redis for frequent paths and Docker containerization, ensuring horizontal scalability and faster response times under load.}
+        \resumeItem{\textbf{Outcome:} Achieved 80\% reduction in pathfinding and parsing runtime through optimization, significantly lowering infrastructure costs and improving user experience.}
       \resumeItemListEnd
       
     % PROJECT 4: IoT Plant Watering System - Best for: IoT roles, embedded systems, hardware integration
@@ -143,8 +143,8 @@
     %   {\textbf{\href{https://github.com/190-785/Plant_Watering_System}{IoT Automatic Plant Watering System with Web Dashboard}}}{Jun 2025 -- Jul 2025}
     %   \resumeItemListStart
     %     \resumeItem{\textbf{Tech Stack:} ESP8266, Firebase, React, ESPAsyncWebServer, C++}
-    %     \resumeItem{Designed and built an autonomous IoT system to monitor soil moisture and dispense water, fully integrated with a cloud backend and real-time web dashboard at \href{https://bloomwatch-webapp.vercel.app}{\textbf{bloomwatch-webapp.vercel.app}} for remote monitoring and control.}
-    %     \resumeItem{Developed secure Wi-Fi configuration portal and implemented token-based Firebase authentication, enabling users to adjust moisture thresholds, watering cycles, and manually trigger pumps with safety features through an interactive dashboard displaying real-time telemetry graphs.}
+    %     \resumeItem{Designed and built autonomous IoT system monitoring soil moisture and dispensing water, fully integrated with cloud backend and real-time web dashboard at \href{https://bloomwatch-webapp.vercel.app}{\textbf{bloomwatch-webapp.vercel.app}} for remote monitoring and control.}
+    %     \resumeItem{Engineered secure Wi-Fi configuration portal and implemented token-based Firebase authentication, enabling users to adjust moisture thresholds, watering cycles, and manually trigger pumps with safety features through interactive dashboard displaying real-time telemetry graphs.}
     %     \resumeItem{\textbf{Outcome:} Improved water conservation and plant health with 20\% increase in watering efficiency; preparing for commercial launch with modular hardware design for scalability.}
     %   \resumeItemListEnd
       
